--- a/index.html
+++ b/index.html
@@ -3,8 +3,58 @@
 
 	<head>
 		<title> Stephanie Yip | Computer Engineer </title>
+		<link href = "style.css" type="text/css" rel = "stylesheet" >
 	</head>
+	
+	<body>
+	
+		<!--Navigation Bar -->	
+		<div class = "nav outerText">
+			<ul>
+				<li><a href = "index.html" >Home</a></li>
+				<li><a href = "#resume">Résumé</a></li>
+				<li><a href = "#projects" >Projects</a></li>
+				<li><a href = "#photography">Photography</a></li>
+				<li><a href = "#contact">Contact</a></li>
+			</ul>	
+		</div>
+	
+		<!--Header -->	
+		<div class = "header">
+			<h1>Stephanie Yip</h1>
+			<h2>Computer Engineer</h2>
+		</div>
+	
+		<!-- About -->
+		<div class = "about">
+			<h3>Hello!</h3>
+			<p class = "insideText"> I’m Stephanie Yip, a recently graduate with a B.S. in 
+			Electrical and Computer Engineering. My areas of interest include aerospace, 
+			embedded devices, and internet of things. Namely, I like the integration of 
+			hardware and software. My goal is to work on something that more or less 
+			combines the two fields I studied in college– electrical engineering and 
+			computer science. I’m not entirely sure what that opportunity looks like, but in the 
+			meantime, I enjoy learning more about software. </p>
+			<p class = "insideText">I decided to create a website as a side project, 
+			and this is the result. Here is my engineering portfolio that shows my 
+			experiences and projects. I have also included my photography for fun.</p>
+			
+			<div class = "line"></div>
+		</div>
 
+	
+		<!-- Footer -->
+		<div id = "footer">
+			<span>© 2018 Stephanie Yip</span>
+			
+			<span class = "contactLinks outerText">
+			<a href = "mailto:stephaniekyyip@gmail.com">E-mail</a>
+			<a href = "https://www.linkedin.com/in/stephaniekyyip/">LinkedIn</a>
+			<a href = "https://github.com/stephaniekyyip">GitHub</a>
+			</span>
+		</div>
+	
+	</body>
 </html>
 
 
