Trying a new method of getting the contact form to work

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 			using the form below. I’ll get back to you as soon as possible. </p>
 			
 			<!-- Contact Form -->
-			<form name= "contactForm" method = "post" action = "sendEmail.php">
+			<form name= "contactForm" method = "post" action = "https://formspree.io/stephaniekyyip@gmail.com">
 				<div class = "twoCol">
 					<div class = "col1">
 					<label for="senderName" class = "formText">Name</label>
@@ -52,6 +52,7 @@
 					<br>
 				</div>
 				
+				<input type="hidden" name="_subject" value = "Email from your website">
 				<input type = "submit" value = "Submit" name = "submit""></span>
 			</form>
 			<!-- End Contact Form -->
