Minor changes trying to get contact form working properly

--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
 				</div>
 				
 				<input type="hidden" name="_subject" value = "Email from your website">
+				<input type="hidden" name="_replyto" value = "stephaniekyyip@gmail.com">
 				<input type = "submit" value = "Submit" name = "submit""></span>
 			</form>
 			<!-- End Contact Form -->
