--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 			computer science. I’m not entirely sure what that opportunity looks like, but in the 
 			meantime, I enjoy learning more about software. </p>
 			
-			<p class = "insideText">I decided to create a website as a side project, 
-			and this is the result. Here is my engineering portfolio that shows my 
-			experiences and projects. I have also included my photography for fun.</p>
+			<p class = "insideText">I have spent about a decade trying to learn HTML and 
+			CSS to create my own themes on various websites, starting with Neopets in 
+			elementary school. Now that I have more free time and experience in computer 
+			science, I decided to hone my technical skills and finally create my own 
+			website. This is my side project and portfolio for my engineering work and 
+			projects. I have also included my photography for fun. </p>
 			
 			<div class = "line"></div>
 		</div>
