Changed design of home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 		<!--Navigation Bar -->	
 		<div class = "nav outerLinks">
+			<span class = "outerText">Stephanie Yip</span>
 			<ul>
 				<li class = "active"><a href = "index.html" >Home</a></li>
 				<li><a href = "#resume">Résumé</a></li>
@@ -21,31 +22,55 @@
 	
 		<!--Header -->	
 		<div class = "header">
-			<h1>Stephanie Yip</h1>
-			<h2>Computer Engineer</h2>
+			<h1>Welcome</h1>
+			<!--<h2>A Computer / Software Engineer Portfolio</h2>-->
 		</div>
 	
 		<!-- About -->
+		<div id = "about">
+		
+			<!-- Bulletpoints-->
+			<div class = "twoCol">
+				<ul>
+				
+					<div class = "col1">
+						<li><span class = "labelText">I am</span></li>
+						<li><span class = "labelText">I studied</span></li>
+						<li><span  class = "labelText">I like</span></li>
+						<li><span class = "labelText">In Summary</span></li>
+					</div>
+				
+					<div class = "col2">
+						<li><span> Stephanie Yip</span></li>
+						<li><span> Electrical and Computer Engineering</span></li>
+						<li><span> Embedded Devices, Internet of Things, Aerospace</span></li>
+						<li><span> I am a recent college grad trying to learn new things</span></li>
+					</div>			
+				</ul>
+			</div>
+			
+			--<div class = "line"></div>
 		<div class = "mainContent">
-			<h3>Hello!</h3>
-			<p class = "insideText"> I am Stephanie Yip, a recently graduate with a B.S. in 
-			Electrical and Computer Engineering. My areas of interest include aerospace, 
-			embedded devices, and internet of things. Namely, I like the integration of 
-			hardware and software. My goal is to work on something that more or less 
-			combines the two fields I studied in college– electrical engineering and 
-			computer science. I’m not entirely sure what that opportunity looks like, but in the 
-			meantime, I enjoy learning more about software. </p>
 			
-			<p class = "insideText">I have spent about a decade trying to learn HTML and 
-			CSS to create my own themes on various websites, starting with Neopets in 
-			elementary school. Now that I have more free time and experience in computer 
-			science, I decided to hone my technical skills and finally create my own 
-			website. This is my side project and portfolio for my engineering work and 
-			projects. I have also included my photography for fun. </p>
+			<h3>My Interests</h3>
+			<p class = "insideText">The area that fascinates me the most is the 
+			integration of hardware and software. My goal is to work on something 
+			that more or less combines the two fields I studied in college– electrical 
+			engineering and computer science. I’m not entirely sure what that opportunity 
+			looks like, but in the meantime, I enjoy learning more about software.
+			</p>
+			<h3>About This Website</h3>
+			<p class = "insideText"> I have spent the past decade trying to learn HTML 
+			and CSS to create my own themes on various websites, starting with Neopets 
+			in elementary school. Now that I have more free time and experience in 
+			computer science, I decided to buckle down and finally understand how this 
+			all works. I acknowledge that I know practically nothing about web 
+			development, but I’m having fun trying anyway.
+			</p>
 			
-			<div class = "line"></div>
+			
 		</div>
-
+	</div>
 	
 		<!-- Footer -->
 		<div id = "footer">
