First draft of responsive design for index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		
 <!------------ Page Title Block ------------> 
 	<section class = "pgTitleBlock">
-		<div class = "container center">
+		<div class = "container">
 			<h1>Hello</h1>		
 		</div>
 	</section>
@@ -75,7 +75,7 @@
 <!------------------------------ END ABOUT: BULLETPOINTS ------------------------------>
 	
 <!------------------------------ About: Writing --------------------------------------> 
-	<section id = "about-writing">
+	<article id = "about-writing">
 		<div class = "container mainContent">
 			
 			<h1>My Interests</h1>
@@ -96,7 +96,7 @@
 		
 		</div>
 	
-	</section>
+	</acticlce>
 <!------------------------------ END: ABOUT WRITING ------------------------------------> 
 	
 <!----------------------------------- Footer -------------------------------------------> 
