Almost done with responsive design for index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 	<head>
 		<meta charset = "utf-8">
-		<meta name = "viewpoint" content = "width=device-width">
+		<meta name = "viewpoint" content = "width=device-width, initial-scale:1.0, 
+		maximum-scale=1.0">
 		
 		<title> Stephanie Yip | Computer Engineer </title>
 		<link href = "style.css" type="text/css" rel = "stylesheet" >
@@ -62,9 +63,7 @@
 					<li>Electrical and Computer Engineering</li>
 					<li>Embedded Devices, Internet of Things, Aerospace</li>
 					<li>I am a recent college grad trying to learn new things</li>
-				
 						
-			
 			</div>
 			</ul>
 	</div>
@@ -74,14 +73,19 @@
 	</section>
 <!------------------------------ END ABOUT: BULLETPOINTS ------------------------------>
 	
+	<section id = "responsive-about">
+	
+	</section>
+	
+	
 <!------------------------------ About: Writing --------------------------------------> 
 	<article id = "about-writing">
 		<div class = "container mainContent">
 			
 			<h1>My Interests</h1>
 			<p>The area that fascinates me the most is the 
-			integration of hardware and software. My goal is to work on something 
-			that more or less combines the two fields I studied in college– electrical 
+			integration of hardware and software. I hope to have the pleasure of working on 
+			something that combines the two fields I studied in college– electrical 
 			engineering and computer science. I’m not entirely sure what that opportunity 
 			looks like, but in the meantime, I enjoy learning more about software.</p>
 			
@@ -96,7 +100,7 @@
 		
 		</div>
 	
-	</acticlce>
+	</article>
 <!------------------------------ END: ABOUT WRITING ------------------------------------> 
 	
 <!----------------------------------- Footer -------------------------------------------> 
