Finished tweaking responsive version of index.html for mobile

--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html>
 
 	<head>
-		<meta charset = "utf-8">
-		<meta name = "viewpoint" content = "width=device-width, initial-scale:1.0, 
-		maximum-scale=1.0">
+		<meta charset = "UTF-8">
+		<meta name="viewport" content="width=device-width initial-scale=1.0" />
 		
 		<title> Stephanie Yip | Computer Engineer | Home </title>
-		<link href = "style.css" type="text/css" rel = "stylesheet" >
+		<link rel= "stylesheet" href="style.css"/>
 	</head>
 
 
-<!------------------------------------- Header -------------------------------------> 
+<!-- Header --> 
 	<body>
 	<header>
 		<div class = "container">
 			<h1>Stephanie Yip</h1>
 		
-			<!------------ Navigation Bar ------------> 
+			<!-- Navigation Bar --> 
 			<nav>		
 				<ul>
 					<li class = "active"><a href = "index.html">Home</a></li>
@@ -30,16 +29,16 @@
 			
 		</div>
 	</header>
-<!----------------------------------- END HEADER -----------------------------------> 
+<!-- END HEADER --> 
 		
-<!------------ Page Title Block ------------> 
+<!-- Page Title Block --> 
 	<section class = "pgTitleBlock">
 		<div class = "container">
 			<h1>Hello</h1>		
 		</div>
 	</section>
 		
-<!------------------------------ About: Bulletpoints ---------------------------------> 
+<!-- About: Bulletpoints --> 
 	<section id = "about-bullets">
 		
 		<div class = "bulletContainer">
@@ -60,12 +59,12 @@
 		</div>	
 			
 			
-		<!------------ Line divider ------------> 
+		<!-- Line divider --> 
 		<div class = "line"></div>
 	</section>
-<!------------------------------ END ABOUT: BULLETPOINTS ------------------------------>
+<!-- END ABOUT: BULLETPOINTS -->
 	
-	<!-------------------- Responsive Design for About Bullets  ---------------------------> 
+	<!-- Responsive Design for About Bullets  --> 
 	<section id = "responsiveBullets">
 	
 	
@@ -82,13 +81,13 @@
 		<div class = "leftText">Long story short</div>
 		<div class = "rightText">I am a recent college grad trying to learn new things.</div>
 
-		<!------------ Line divider ------------> 
+		<!-- Line divider --> 
 		<div class = "line"></div>
 	</div>	
 	</section>
-	<!-------------------- END Responsive Design for About Bullets  ---------------------> 
+	<!-- END Responsive Design for About Bullets  --> 
 	
-<!------------------------------ About: Writing --------------------------------------> 
+<!-- About: Writing --> 
 	<article id = "about-writing">
 		<div class = "container mainContent">
 			
@@ -111,9 +110,9 @@
 		</div>
 	
 	</article>
-<!------------------------------ END: ABOUT WRITING ------------------------------------> 
+<!-- END: ABOUT WRITING --> 
 	
-<!----------------------------------- Footer -------------------------------------------> 
+<!-- Footer --> 
 	<footer>
 		<div class = "container">
 			<h1>Designed by Stephanie Yip 2018</h1>
@@ -135,7 +134,7 @@
 	</div>
 	</footer>
 	
-<!----------------------------------- END FOOTER ---------------------------------------> 
+<!-- END FOOTER --> 
 	
 	</body>
 </html>	
