--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+	Website by Stephanie Yip, 2018
+	
+	Icons from Socicon, http://socicon.com 
+	Contact form powered by Formspree, https://formspree.io/
+
+-->
 <html>
 
 	<head>
@@ -6,9 +13,9 @@
 		<meta name="viewport" content="width=device-width initial-scale=1.0" />
 		
 		<title> Stephanie Yip | Computer Engineer | Home </title>
-		<link rel= "stylesheet" href="style.css"/>
 		
-		<!-- Icons from http://socicon.com -->
+		<link rel= "stylesheet" href="css/style.css"/>
+		
 		<link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?u8vidh">
 	</head>
 
