Added background image to index.html

--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
 		</div>
 	</header>
 		
-<!-- Page Title Block --> 
-	<section class = "pgTitleBlock">
+<!-- Page Title Block -->
+	<div id = "home"> 
+		
 		<div class = "container">
-			<h1>Hello</h1>		
+			
+			<section class = "pgTitleBlock">
+			<div class = "darkenOverlay"></div>
+				<h1>Hello</h1>	
+			</section>
 		</div>
-	</section>
+		
+	</div>
 		
 <!-- About: Bulletpoints --> 
 	<section id = "about-bullets">
