Tweaked contact form.

--- a/contact.html
+++ b/contact.html
@@ -80,20 +80,19 @@
 			<div class = "formContainer">
 				<div class = "colLeft">
 					Name
-					<input type ="text" id="name" name = "Name">
+					<input type ="text" name = "Name">
 				</div>
 
 				<div class = "colRight">
 					Your E-mail
-					<input type ="email" id="email" name = "E-mail">
+					<input type ="email"  name = "email">
 				</div>
 			</div>
 			Message
-			<textarea name= "Message" id="msg"></textarea>
+			<textarea name= "Message"></textarea>
 			<center><input type ="submit"></center>
 
 				<input type="hidden" name="_subject" value = "Email from your website">
-				<input type="hidden" name="_replyto" value = "stephaniekyyip@gmail.com">
 				<input type="hidden" name="_format" value="plain" />
 				<input type="text" name="_gotcha" style="display:none" />
 		</form>
