Minor changes to form validation.

--- a/contact.html
+++ b/contact.html
@@ -80,17 +80,17 @@
 			<div class = "formContainer">
 				<div class = "colLeft">
 					Name
-					<input type ="text" id = "name" name = "Name" required>
+					<input type ="text" id = "name" name = "Name" required/>
 				</div>
 
 				<div class = "colRight">
 					Your E-mail
-					<input type ="email" id = "email" name = "email" required>
+					<input type ="email" id = "email" name = "email" required/>
 				</div>
 			</div>
 			Message
-			<textarea name= "Message" id = "msg" required></textarea>
-			<center><input type ="submit" onclick="validateForm()"></center>
+			<textarea name= "Message" id = "msg" required/></textarea>
+			<center><input type ="submit"></center>
 
 				<input type="hidden" name="_subject" value = "Email from your website">
 				<input type="hidden" name="_format" value="plain" />
@@ -103,12 +103,12 @@
 		<div class = "responsiveForm">
 			<form name = "contactForm" method = "POST" action = "https://formspree.io/stephaniekyyip@gmail.com">
 				Name
-				<input type ="text" id="name" name = "Name" required>
+				<input type ="text" id="name" name = "Name" required/>
 				Your E-mail
-				<input type ="email" id="email" name = "email" required>
+				<input type ="email" id="email" name = "email" required/>
 				Message
 				<textarea name= "Message" id="msg" required></textarea>
-				<center><input type ="submit" onclick="validateForm()"></center>
+				<center><input type ="submit"></center>
 
 				<input type="hidden" name="_subject" value = "Email from your website">
 				<input type="hidden" name="_format" value="plain" />
@@ -154,7 +154,7 @@
 				<div class = "socialLinks">
 					<h1>Website by Stephanie Yip 2018</h1>
 					<ul>
-						<li><script language="Javascript">
+						<li><script>
 							var username = "stephaniekyyip";
 							var hostname = "gmail.com";
 							var subject = "E-mailing%20From%20Your%20Website";
